--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.thymeleaf.mode=HTML5
 #persist the data
-#spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db102
-spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db102-version2
+spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db102
 #spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
@@ -13,4 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
-
+#change the database name to '_studentID' right before you submit the assignment
